# book-recommendation-backend

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
docs/: api.md
migrations/: 001_initial_schema.surql
scripts/: setup.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dtos/: auth_dtos.rs  book_dtos.rs  mod.rs  recommendation_dtos.rs
src/application/ports/: auth_port.rs  book_port.rs  mod.rs  recommendation_port.rs
src/application/use_cases/: mod.rs
src/application/use_cases/auth/: authenticate_user.rs  mod.rs  register_user.rs
src/config/: database.rs  default.toml  mod.rs  settings.rs
src/di/: container.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: book.rs  mod.rs  recommendation.rs  user.rs
src/domain/errors/: domain_error.rs  mod.rs
src/domain/repositories/: book_repository.rs  mod.rs  recommendation_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  book_service.rs  mod.rs  recommendation_service.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: book_repository_impl.rs  mod.rs  recommendation_repository_impl.rs  user_repository_impl.rs
src/infrastructure/middleware/: auth_middleware.rs  cors_middleware.rs  mod.rs
src/presentation/: mod.rs
src/presentation/controllers/: auth_controller.rs  book_controller.rs  mod.rs  recommendation_controller.rs
src/presentation/middleware/: jwt_middleware.rs  mod.rs
src/presentation/routes/: auth_routes.rs  book_routes.rs  mod.rs  recommendation_routes.rs
tests/common/: mod.rs
(+7 files in other folders)
